--- a/src/app/pages/tabs/tabs.page.html
+++ b/src/app/pages/tabs/tabs.page.html
@@ -20,7 +20,7 @@
       <i class="fas fa-utensils"></i>
       <!-- <ion-label>Donde dormir</ion-label> -->
     </ion-tab-button>
-    <ion-tab-button tab="info">
+    <ion-tab-button tab="place">
       <!-- <ion-label>Donde dormir</ion-label> -->
       <i class="fas fa-palette"></i>
     </ion-tab-button>
