places filtro por departamento

--- a/src/app/pages/place/place.page.html
+++ b/src/app/pages/place/place.page.html
@@ -52,6 +52,10 @@
       </ion-slides>
     </div>
     <div class="cards">
+      <div class="empty" *ngIf="places.length == 0">
+        <div class="text_empty">No hay lugares para el departamento seleccionado</div>
+        <i class="far fa-sad-tear"></i>
+      </div>
       <ion-card
         *ngFor="let item of places"
         id="{{ item.id }}"
