--- a/src/app/pages/place/place.page.html
+++ b/src/app/pages/place/place.page.html
@@ -54,7 +54,7 @@
     <div class="cards">
       <div class="empty" *ngIf="places.length == 0">
         <div class="text_empty">No hay lugares para el departamento seleccionado</div>
-        <i class="far fa-sad-tear"></i>
+        <i class="far fa-sad-tear icon_empty"></i>
       </div>
       <ion-card
         *ngFor="let item of places"
