--- a/src/app/pages/place/place.page.scss
+++ b/src/app/pages/place/place.page.scss
@@ -10,13 +10,13 @@
 
 .text_empty {
     color: #D6D2D1;
-    text-align: center !important;
-    padding-bottom: 15px !important;
+    text-align: center;
+    padding-bottom: 15px;
     font-size: 1.2em;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
-i {
+.icon_empty {
     font-size: 5em;
     color: #D6D2D1;
 }
