detalles css lugares y consulta por prioridad

--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -3,18 +3,18 @@
     margin: 0;
 }
 
-.estrella {
-    color: #ffb134;
-}
+// .estrella {
+//     color: #ffb134;
+// }
 
-.contenedor-iconos {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    justify-items: center;
-    margin: auto;
-    height: 100%;
-}
+// .contenedor-iconos {
+//     display: flex;
+//     flex-direction: row;
+//     justify-content: space-between;
+//     justify-items: center;
+//     margin: auto;
+//     height: 100%;
+// }
 
 ion-label {
     font-family: 'Barlow';
@@ -65,19 +65,19 @@ ion-label {
     width: 100%;
     }
 
-.menu {
-    margin: 3% 7% 3% 7%;
-    height: 7%;
-}
+// .menu {
+//     margin: 3% 7% 3% 7%;
+//     height: 7%;
+// }
 
 
-.icono {
-    .iconMenu {
-        ion-img {
-            height: 100%;
-        }
-    }
-}
+// .icono {
+//     .iconMenu {
+//         ion-img {
+//             height: 100%;
+//         }
+//     }
+// }
 
 .cards {
     overflow-y: scroll;
