--- a/src/app/pages/place/place.page.html
+++ b/src/app/pages/place/place.page.html
@@ -87,9 +87,9 @@
             src="{{ item.imagenHome['url']}}"
             alt="{{ item.nombre }}"
           />
-          <!-- <div class="duracion">
+          <div class="duracion">
             <b class="distancia">{{item.distancia | formatDistancia }}</b>
-          </div> -->
+          </div>
         </ion-card-content>
       </ion-card>
     </div>
