--- a/src/app/pages/place/place.page.scss
+++ b/src/app/pages/place/place.page.scss
@@ -1,23 +1,128 @@
+* {
+  padding: 0;
+  margin: 0;
+}
+
 .empty {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin: 20px 50px;
-    height: 35vh;
-    width: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 20px 50px;
+  height: 35vh;
+  width: auto;
 }
 
 .text_empty {
-    color: #D6D2D1;
-    text-align: center;
-    padding-bottom: 15px;
-    font-size: 1.2em;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  color: #d6d2d1;
+  text-align: center;
+  padding-bottom: 15px;
+  font-size: 1.2em;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 
 .icon_empty {
-    font-size: 5em;
-    color: #D6D2D1;
+  font-size: 5em;
+  color: #d6d2d1;
 }
 
+ion-label {
+  font-family: "Barlow";
+  font-size: 11pt;
+}
+
+.card-content-md {
+  padding: 0px !important;
+}
+
+.cardTitle ion-inherit-color .md .hydrated {
+  font-size: 150%;
+}
+
+.iconTitle {
+  margin-left: auto;
+  margin-top: auto;
+  margin-bottom: auto;
+  padding-right: 5%;
+  font-size: 110%;
+  color: #fff;
+}
+
+.categoria {
+  font-size: 60%;
+  font-weight: 100;
+  color: #000000;
+  text-align: left;
+}
+
+.padre {
+  height: 100%;
+  overflow-y: hidden;
+}
+
+.slider {
+  width: 100%;
+}
+
+.cards {
+  overflow-y: scroll;
+}
+
+.distancia {
+  float: left;
+  margin-left: 3%;
+  padding: 0;
+}
+
+.sliderPrimero,
+.sliderHijo,
+.bannerLink,
+.imgSlider {
+  width: 100%;
+}
+
+.sliderPrimero,
+.sliderHijo,
+.banner,
+.imgSlider {
+  width: 100%;
+}
+
+.logoWhatsapp {
+  color: #fff;
+}
+
+ion-card {
+  margin: 0 5% 5% 5%;
+  border: none !important;
+  border-radius: 15px !important;
+  -webkit-box-shadow: 0px 8px 6px -1px rgba(0, 0, 0, 0.12) !important;
+  -moz-box-shadow: 0px 8px 6px -1px rgba(0, 0, 0, 0.12) !important;
+  box-shadow: 0px 8px 6px -1px rgba(0, 0, 0, 0.12) !important;
+}
+
+ion-card-header {
+  padding: 4% !important;
+  font-family: Barlow;
+  font-weight: 600;
+  font-size: 120%;
+  color: #ffffff;
+  border-top-left-radius: 15px !important;
+  border-top-right-radius: 15px !important;
+}
+
+.estrellas {
+  float: right;
+  margin-right: 3%;
+}
+
+.imgCard {
+  height: auto;
+  width: 100%;
+  min-height: 11.875em;
+}
+
+.toggle-item {
+  display: flex;
+  flex-direction: row;
+}
