--- a/src/app/pages/home-menu/home-menu.page.scss
+++ b/src/app/pages/home-menu/home-menu.page.scss
@@ -144,3 +144,13 @@ ion-button {
 .filter_button > i {
   color: #888;
 }
+
+.depto_selected {
+  color: #01dfb8;
+}
+
+.depto_list {
+  margin: 10px auto;
+  width: 85%;
+  border-radius: 10px;
+}
