--- a/src/app/pages/home-menu/home-menu.page.html
+++ b/src/app/pages/home-menu/home-menu.page.html
@@ -9,17 +9,17 @@
         </p>
       </div>
       <div class="filter_button">
-        <ion-label (click)="seeDepto()">departamento</ion-label>
+        <ion-label (click)="seeDepto()" *ngIf="depto" class="depto_selected">departamento</ion-label>
+        <ion-label (click)="seeDepto()" *ngIf="!depto">departamento</ion-label>
         <i class="fas fa-exchange-alt"></i>
         <ion-label>distancia</ion-label>
       </div>
-      <ion-list *ngIf="depto">
+      <ion-list *ngIf="depto" class="depto_list">
         <ion-radio-group value="">
           <ion-item (click)="select('San José', null)">
             <ion-label>San José</ion-label>
             <ion-radio slot="start" value="San José"></ion-radio>
           </ion-item>
-      
           <ion-item (click)="select('Colonia', null)">
             <ion-label>Colonia</ion-label>
             <ion-radio slot="start" value="Colonia"></ion-radio>
@@ -33,7 +33,6 @@
             <ion-radio slot="start" value="Florida"></ion-radio>
           </ion-item>
         </ion-radio-group>
-        <ion-button (click)="close()">Cancelar</ion-button>
       </ion-list>
     </div>
 
