--- a/src/app/pages/place/place.page.html
+++ b/src/app/pages/place/place.page.html
@@ -59,7 +59,8 @@
       <ion-card
         *ngFor="let item of places"
         id="{{ item.id }}"
-        [routerLink]="['/places', item.id]"
+        (click)="getPlace(item.id)"
+        [routerLink]="['/place-selected']"
       >
         <ion-card-header
           *ngIf="item.tipo == 'Rural'"
