back events tabs

--- a/src/app/pages/event-detail/event-detail.page.html
+++ b/src/app/pages/event-detail/event-detail.page.html
@@ -2,7 +2,7 @@
   <ion-toolbar color="information">
     <ion-buttons slot="start">
       <ion-back-button
-        defaultHref="events"
+        defaultHref="tabs/events"
         (click)="salir()"
         color="back"
         text=""
