--- a/src/app/pages/home-menu/home-menu.page.html
+++ b/src/app/pages/home-menu/home-menu.page.html
@@ -28,7 +28,7 @@
 
     <div class="menu">
       <div class="div__menu">
-        <div class="div__menu-izq" routerLink="/tabs/places">¿dónde ir?</div>
+        <div class="div__menu-izq" routerLink="/tabs/place">¿dónde ir?</div>
         <div class="div__menu-izq" routerLink="/tabs/eat">¿dónde<br> comer?</div>
         <div class="div__menu-izq" routerLink="/tabs/sleep">¿dónde<br> dormir?</div>
       </div>
