guardar filtro en localStorage

--- a/src/app/pages/place/place.page.scss
+++ b/src/app/pages/place/place.page.scss
@@ -136,6 +136,8 @@ ion-chip {
   width: 85%;
   margin: 0 auto 5px auto;
   border: 1px solid #3880ff;
+  z-index: 20;
+  background-color: #fff;
 }
 
 form {
