--- a/src/app/pages/where-sleep/where-sleep.page.scss
+++ b/src/app/pages/where-sleep/where-sleep.page.scss
@@ -70,3 +70,26 @@ span {
     border-radius: 15%;
     margin: 0px;
 }
+
+.empty {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 20px 50px;
+    height: 35vh;
+    width: auto;
+  }
+  
+  .text_empty {
+    color: #d6d2d1;
+    text-align: center;
+    padding-bottom: 15px;
+    font-size: 1.2em;
+    font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  }
+  
+  .icon_empty {
+    font-size: 5em;
+    color: #d6d2d1;
+  }
