--- a/src/app/pages/where-eat/where-eat.page.scss
+++ b/src/app/pages/where-eat/where-eat.page.scss
@@ -88,3 +88,36 @@ span {
 *{
     z-index: 0;
 }
+
+.form_filter {
+    width: 85%;
+    margin: 0 auto 5px auto;
+    border: 1px solid #3880ff;
+  }
+
+.filter_place {
+    margin: -30px auto 0 auto;
+    z-index: 20;
+    width: 85%;
+    opacity: 1;
+}
+
+.magnifying {
+    padding: 10.5px;
+    border-radius: 100%;
+    color: #fff;
+    background-color: #01dfb8;
+    margin-right: 10px;
+}
+
+form {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px;
+  }
+  
+  form > ion-select {
+    width: 40%;
+  }
