ajustes en filtros

--- a/src/app/pages/where-eat/where-eat.page.scss
+++ b/src/app/pages/where-eat/where-eat.page.scss
@@ -121,3 +121,26 @@ form {
   form > ion-select {
     width: 40%;
   }
+
+  .empty {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 20px 50px;
+    height: 35vh;
+    width: auto;
+  }
+  
+  .text_empty {
+    color: #d6d2d1;
+    text-align: center;
+    padding-bottom: 15px;
+    font-size: 1.2em;
+    font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  }
+  
+  .icon_empty {
+    font-size: 5em;
+    color: #d6d2d1;
+  }
