--- a/src/app/pages/where-eat/where-eat.page.html
+++ b/src/app/pages/where-eat/where-eat.page.html
@@ -1,54 +1,71 @@
 <ion-header>
-    <ion-toolbar color="eat">
-        <ion-img slot="start" src="/assets/icon/comida.png"></ion-img>
-        <ion-title>¿Dónde Comer?</ion-title>
-    </ion-toolbar>
+  <ion-toolbar color="eat">
+    <ion-img slot="start" src="/assets/icon/comida.png"></ion-img>
+    <ion-title>¿Dónde Comer?</ion-title>
+  </ion-toolbar>
 </ion-header>
 <ion-content>
-    <div id="alto" class="slider">
-        <ion-slides class="sliderPrimero" scrollbar="false" pager="false" [options]="slideOpts">
-            <ion-slide *ngFor="let item of sliderDondeComer" class="sliderHijo"> 
-                <img class="imgSlider" src="{{item.imagen}}" />                
-            </ion-slide>            
-        </ion-slides>
-        <!-- <ion-searchbar cancelButtonText="Custom Cancel" placeholder="" (ionChange)="buscar($event)"></ion-searchbar> -->
-        <div class="filter_place" (click)="changeFilter()">
-            <ion-chip color="primary">
-            <i class="fas fa-search magnifying"></i
-            ><ion-label>filtrar lugares</ion-label></ion-chip
-            >
-        </div>
+  <div id="alto" class="slider">
+    <ion-slides
+      class="sliderPrimero"
+      scrollbar="false"
+      pager="false"
+      [options]="slideOpts"
+    >
+      <ion-slide *ngFor="let item of sliderDondeComer" class="sliderHijo">
+        <img class="imgSlider" src="{{item.imagen}}" />
+      </ion-slide>
+    </ion-slides>
+    <div class="filter_place" (click)="changeFilter()">
+      <ion-chip color="primary">
+        <i class="fas fa-search magnifying"></i
+        ><ion-label>filtrar lugares</ion-label></ion-chip
+      >
+    </div>
 
     <div *ngIf="isFilter" class="form_filter">
-        <form>
-        <ion-select placeholder="Localidad">
-        <ion-select-option >localida</ion-select-option>
+      <form [formGroup]="filterForm">
+        <ion-select placeholder="Localidad" formControlName="localidad">
+          <ion-select-option value="">Todos</ion-select-option>
+          <ion-select-option
+            *ngFor="let loc of locationActive"
+            value="{{ loc.localidad }}"
+            >{{ loc.localidad }}</ion-select-option
+          >
         </ion-select>
         <ion-select placeholder="Categoría">
-        <ion-select-option>Departamento</ion-select-option>
+          <ion-select-option>Departamento</ion-select-option>
         </ion-select>
-        <ion-button>Filtrar</ion-button>
-    </form>
+        <ion-button type="submit" (click)="filterEat()">Filtrar</ion-button>
+      </form>
     </div>
-</div>
-<ion-list class="lista">
-        <ion-item *ngFor="let item of weat_location | filtroDondeComer:textoBuscar">
-            <div class="padre">
-                <div class="imagen">
-                    <ion-avatar item-start>
-                        <ion-img [src]="item.imagen.url" class="img-elem"></ion-img>
-                    </ion-avatar>
-                </div>
-                <div class="info">
-                    <ion-label>
-                        <h2 id="eat-info">{{ item.nombre }}</h2>
-                        <div class="infoAbajo">
-                            <h3 id="eat-info">{{ item.direccion }}</h3>
-                            <p id="eat-info"><span id="eat-info">Tel: </span>{{ item.telefonos["numero"] }}</p>
-                        </div>
-                    </ion-label>
-                </div>
+  </div>
+  <ion-list class="lista">
+    <div class="empty" *ngIf="eat.length == 0">
+      <div class="text_empty">
+        No hay lugares para el departamento seleccionado
+      </div>
+      <i class="far fa-sad-tear icon_empty"></i>
+    </div>
+    <ion-item *ngFor="let item of eat | filtroDondeComer:dataForm">
+      <div class="padre">
+        <div class="imagen">
+          <ion-avatar item-start>
+            <ion-img [src]="item.imagen.url" class="img-elem"></ion-img>
+          </ion-avatar>
+        </div>
+        <div class="info">
+          <ion-label>
+            <h2 id="eat-info">{{ item.nombre }}</h2>
+            <div class="infoAbajo">
+              <h3 id="eat-info">{{ item.direccion }}</h3>
+              <p id="eat-info" *ngFor="let tel of item.telefonos">
+                <span id="eat-info">Tel: </span>{{ tel.numero }}
+              </p>
             </div>
-        </ion-item>
-    </ion-list>
+          </ion-label>
+        </div>
+      </div>
+    </ion-item>
+  </ion-list>
 </ion-content>
