--- a/src/app/pages/where-sleep/where-sleep.page.html
+++ b/src/app/pages/where-sleep/where-sleep.page.html
@@ -5,11 +5,29 @@
   </ion-toolbar>
 </ion-header>
 <ion-content>
-  <ion-searchbar
-    cancelButtonText="Custom Cancel"
-    placeholder=""
-    (ionChange)="buscar($event)"
-  ></ion-searchbar>
+  <div class="filter_place" (click)="changeFilter()">
+    <ion-chip color="primary">
+      <i class="fas fa-search magnifying"></i
+      ><ion-label>filtrar lugares</ion-label></ion-chip
+    >
+  </div>
+
+  <div *ngIf="isFilter" class="form_filter">
+    <form [formGroup]="filterForm">
+      <ion-select placeholder="Localidad" formControlName="localidad">
+        <ion-select-option value="">Todos</ion-select-option>
+        <ion-select-option
+          *ngFor="let loc of locationActive"
+          value="{{ loc.localidad }}"
+          >{{ loc.localidad }}</ion-select-option
+        >
+      </ion-select>
+      <ion-select placeholder="Categoría">
+        <ion-select-option>Categoría</ion-select-option>
+      </ion-select>
+      <ion-button type="submit" (click)="filterSleep()">Filtrar</ion-button>
+    </form>
+  </div>
   <ion-list>
     <div class="empty" *ngIf="sleep.length == 0">
       <div class="text_empty">
@@ -17,7 +35,7 @@
       </div>
       <i class="far fa-sad-tear icon_empty"></i>
     </div>
-    <ion-item *ngFor="let item of sleep | filtroDondeDormir:textoBuscar">
+    <ion-item *ngFor="let item of sleep | filtroDondeDormir:dataForm">
       <div class="padre">
         <div class="imagen">
           <ion-avatar item-start>
@@ -29,8 +47,8 @@
             <h2 id="sleep-info">{{ item.nombre }}</h2>
             <div class="infoAbajo">
               <h3 id="sleep-info">{{ item.direccion }}</h3>
-              <p id="sleep-info">
-                <span id="sleep-info">Tel: </span>{{ item.telefono }}
+              <p id="sleep-info" *ngFor=" let tel of item.telefonos">
+                <span id="sleep-info">Tel: </span>{{ tel.numero }}
               </p>
             </div>
           </ion-label>
